# django-cckrWu7u

./: .gitignore  README.md  docker-compose.yml
.devcontainer/: devcontainer.json  docker-compose.yml
containers/image-analysis-app/: Dockerfile  entrypoint.sh
containers/mysql/: Dockerfile  init.sh  init.sql
design_memo/: components.md  usecase_desctiption.md
docs/: DEVELOPER_NOTE.md  api_spec.md
image_analysis_project/: manage.py  pytest.ini
image_analysis_project/image_analysis/: .env  asgi.py  settings.py  urls.py  wsgi.py
image_analysis_project/image_analysis_app/: admin.py  apps.py  models.py  urls.py  views.py
image_analysis_project/image_analysis_app/adapters/repositories/: __init__.py  ai_analysis_log_repository.py
image_analysis_project/image_analysis_app/migrations/: 0001_initial.py
image_analysis_project/image_analysis_app/views/: __init__.py  analysis_log.py  analyze.py
image_analysis_project/image_analysis_lib/: README.md  __init__.py  pyproject.toml
image_analysis_project/image_analysis_lib/entities/: __init__.py  analysis_log.py  analysis_metadata.py  analysis_result.py
image_analysis_project/image_analysis_lib/gateway/: ai_image_analysis_service.py
image_analysis_project/image_analysis_lib/interactors/: analyze_image_use_case.py  exceptions.py  get_analysis_log_use_case.py  use_case_interface.py
image_analysis_project/image_analysis_lib/repositories/: __init__.py  ai_analysis_log_repository_interface.py
image_analysis_project/image_analysis_lib/tests/entities/: test_analysis_log.py
(+2 files in other folders)
