[project]
name = "image-analysis-lib"
version = "0.1.0"
description = "library for image analysis."
authors = [
    { name = "yamaji", email = "yamayamayamaji@gmail.com" }
]
dependencies = [
    "pydantic>=2.7.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = [
    "image_analysis_lib",
]

[project.scripts]
image-analysis-cli = "image_analysis_cli.cli:main"
